third_party/rust/paste/tests/ui/no-env-var.stderr
error: no such env var: "PASTE_UNKNOWN"
 --> $DIR/no-env-var.rs:2:17
  |
2 |     fn [<a env!("PASTE_UNKNOWN") b>]() {}
  |                 ^^^^^^^^^^^^^^^
